@@ -255,6 +255,7 @@ records-mismatch-record-clause:	error	# not verified yet
 record-delimiter:			ignore
 sequential-delimiters:			unconformable
 record-delim-with-fixed-recs:		unconformable
+record-sequential-advancing: error
 missing-statement:			warning		# not verified yet
 zero-length-literals:			unconformable
 xml-generate-extra-phrases:		unconformable
