@@ -252,6 +252,7 @@ free-redefines-position:		unconformable
 records-mismatch-record-clause:	error
 record-delimiter:			ok
 sequential-delimiters:			ok
+record-sequential-advancing: ok
 record-delim-with-fixed-recs:		unconformable
 missing-statement:			error
 zero-length-literals:			unconformable
