@@ -263,6 +263,7 @@ records-mismatch-record-clause:	error	# actually the complete clause is excluded
 record-delimiter:			warning		# should not be used ...
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		unconformable
+record-sequential-advancing: ok
 missing-statement:			error
 zero-length-literals:			unconformable
 xml-generate-extra-phrases:		unconformable
