@@ -512,6 +512,7 @@ test.conf: missing definitions:
 	no definition of 'record-delimiter'
 	no definition of 'sequential-delimiters'
 	no definition of 'record-delim-with-fixed-recs'
+	no definition of 'record-sequential-advancing'
 	no definition of 'missing-statement'
 	no definition of 'zero-length-literals'
 	no definition of 'xml-generate-extra-phrases'
